--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
 
     <groupId>org.example</groupId>
     <artifactId>spring-framework</artifactId><packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version><modules><module>spring-entity</module><module>spring-bean</module></modules>
+    <version>1.0-SNAPSHOT</version><modules><module>spring-entity</module><module>spring-bean</module><module>spring-aop</module></modules>
 
      <properties>
-        <spring-version>5.2.5.RELEASE</spring-version>
+        <spring-version>4.0.6.RELEASE</spring-version>
     </properties>
 
     <dependencies>
+        <!--spring 的核心容器-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -33,6 +34,35 @@
             <artifactId>spring-context-support</artifactId>
             <version>${spring-version}</version>
         </dependency>
+
+        <!--aop-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <!--测试-->
+         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+		</dependency>
     </dependencies>
 
     
